@@ -24,7 +24,6 @@ import java.util.function.BiFunction;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.reactivestreams.Publisher;
-
 import org.springframework.beans.factory.BeanFactory;
 import org.springframework.core.ResolvableType;
 import org.springframework.util.Assert;
@@ -38,6 +37,7 @@ import org.springframework.util.ReflectionUtils;
  * @author Mark Paluch
  * @author Christoph Strobl
  * @author Michael J. Simons
+ * @author Oliver Drotbohm
  */
 class DefaultReactiveEntityCallbacks implements ReactiveEntityCallbacks {
 
@@ -63,11 +63,13 @@ class DefaultReactiveEntityCallbacks implements ReactiveEntityCallbacks {
 	}
 
 	@Override
+	@SuppressWarnings("unchecked")
 	public <T> Mono<T> callback(Class<? extends EntityCallback> callbackType, T entity, Object... args) {
 
 		Assert.notNull(entity, "Entity must not be null");
 
-		Class<T> entityType = (Class<T>) (entity != null ? ClassUtils.getUserClass(entity.getClass())
+		Class<T> entityType = (Class<T>) (entity != null
+				? ClassUtils.getUserClass(entity.getClass())
 				: callbackDiscoverer.resolveDeclaredEntityType(callbackType).getRawClass());
 
 		Method callbackMethod = callbackMethodCache.computeIfAbsent(callbackType, it -> {
@@ -112,7 +114,7 @@ class DefaultReactiveEntityCallbacks implements ReactiveEntityCallbacks {
 				}
 
 				throw new IllegalArgumentException(
-						String.format("Callback invocation on %s returned null value for %s", callback.getClass(), entity));
+						"Callback invocation on %s returned null value for %s".formatted(callback.getClass(), entity));
 			} catch (IllegalArgumentException | ClassCastException ex) {
 
 				String msg = ex.getMessage();
